# WarheadBand

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  CMakePresets.json  sonar-project.properties
src/: CMakeLists.txt
src/cmake/: ac_macros.cmake  genrev.cmake  googletest-download.cmake  googletest.cmake  revision.h.in.cmake  showoptions.cmake
src/cmake/macros/: AutoCollect.cmake  CheckBuildDir.cmake  CheckPlatform.cmake  ConfigInstall.cmake  ConfigureApplications.cmake  ConfigureBaseTargets.cmake  ConfigureModules.cmake  ConfigureScripts.cmake  ConfigureTools.cmake  DynamicLibInstall.cmake  FindGit.cmake  FindMySQL.cmake  FindPCHSupport.cmake  GenerateNodeApplication.cmake  GroupSources.cmake
src/cmake/platform/: after_platform.cmake  cmake_uninstall.in.cmake  settings.cmake
src/common/: CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Containers.h  Define.h  GitRevision.cpp  GitRevision.h  Logo.cpp  Logo.h
src/common/Asio/: AsioHacksFwd.h  DeadlineTimer.h  IoContext.h  IpAddress.h  IpNetwork.h  Resolver.h  Strand.h
src/common/AsyncCallback/: AsyncCallbackMgr.cpp  AsyncCallbackMgr.h
src/common/Collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  DynamicTree.cpp  DynamicTree.h  RegularGrid.h  VMapDefinitions.h  VMapTools.h
src/common/Configuration/: BuiltInConfig.cpp  BuiltInConfig.h  Config.cpp  Config.h
src/common/Cryptography/: AES.cpp  AES.h  ARC4.cpp  ARC4.h  Argon2.cpp  Argon2.h  BigNumber.cpp  BigNumber.h  CryptoConstants.h  CryptoGenerics.h  CryptoHash.h  CryptoRandom.cpp  CryptoRandom.h  HMAC.h  OpenSSLCrypto.cpp  OpenSSLCrypto.h  SRP6.cpp  SRP6.h  SessionKeyGenerator.h  TOTP.cpp  TOTP.h
src/common/DataStores/: DBCFileLoader.cpp  DBCFileLoader.h
src/common/Database/: AdhocStatement.h  DatabaseEnv.cpp  DatabaseEnv.h  DatabaseWorker.cpp  DatabaseWorker.h  DatabaseWorkerPool.cpp  DatabaseWorkerPool.h  Field.cpp  Field.h  MySQLConnection.cpp  MySQLConnection.h  MySQLThreading.h  PreparedStatement.cpp  PreparedStatement.h  QueryHolder.cpp  QueryHolder.h  QueryResult.cpp  QueryResult.h  SQLOperation.h  Transaction.h
src/common/Debugging/: Errors.cpp  Errors.h  WheatyExceptionReport.cpp  WheatyExceptionReport.h
src/common/Dynamic/: FactoryHolder.h  LinkedList.h  ObjectRegistry.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerFunctionsPtr.h  TypeContainerVisitor.h  TypeList.h
src/common/Encoding/: Base32.cpp  Base32.h  Base64.cpp  Base64.h  BaseEncoding.h
src/common/IPLocation/: IPLocation.cpp  IPLocation.h
src/common/Logging/: Channel.cpp  Channel.h  ConsoleChannel.cpp  ConsoleChannel.h  Exception.h  FileChannel.cpp  FileChannel.h  ILog.h  Log.cpp  Log.h  LogChannel.cpp  LogChannel.h  LogCommon.h  LogMessage.cpp  LogMessage.h  Logger.cpp  Logger.h  SystemLog.cpp  SystemLog.h
src/common/Metric/: Metric.cpp  Metric.h
src/common/Navigation/: DetourExtended.cpp  DetourExtended.h
src/common/Packets/: ByteBuffer.cpp  ByteBuffer.h  WorldPacket.h
src/common/Platform/: ServiceWin32.cpp  ServiceWin32.h
src/common/PrecompiledHeaders/: commonPCH.h
src/common/Progress/: ProgressBar.cpp  ProgressBar.h
src/common/Threading/: Callback.h  IoContextMgr.cpp  IoContextMgr.h  LockedQueue.h  MPSCQueue.h  PCQueue.h  PacketQueue.h  PolicyLock.h  ProcessPriority.cpp  ProcessPriority.h  ProducerConsumerQueue.h  SignalHandlerMgr.cpp  SignalHandlerMgr.h  Singleton.h  ThreadPool.h  ThreadPoolMgr.cpp  ThreadPoolMgr.h  Threading.cpp  Threading.h  ThreadingModel.h
src/common/Utilities/: AsyncCallbackProcessor.h  ByteConverter.h  CircularBuffer.h  Containers.h  DataMap.h  Duration.h  EnumFlag.h  EventEmitter.h  EventMap.cpp  EventMap.h  EventProcessor.cpp  EventProcessor.h  FileUtil.cpp  FileUtil.h  Geometry.h  IteratorPair.h  MathUtil.h  MessageBuffer.h  Optional.h  Physics.h  Random.cpp  Random.h  SFMTRand.cpp  SFMTRand.h  ServiceWin32.cpp  SignalHandler.h  SmartEnum.h  StartProcess.cpp  StartProcess.h  StopWatch.h  StringConvert.h  StringFormat.cpp  StringFormat.h  TaskScheduler.cpp  TaskScheduler.h  Timer.cpp  Timer.h  Tokenize.cpp  Tokenize.h  Tuples.h  (+4 more)
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/apps/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc
src/server/database/: CMakeLists.txt
src/server/game/: CMakeLists.txt
src/server/node_master/: CMakeLists.txt  Main.cpp  node_master.conf.dist  node_master.rc
src/server/node_pvp/: CMakeLists.txt  Main.cpp  node_pvp.conf.dist  node_pvp.rc
src/server/node_realm/: CMakeLists.txt  Main.cpp  node_realm.conf.dist  node_realm.rc
src/server/scripts/: CMakeLists.txt  ScriptLoader.cpp  ScriptLoader.cpp.in.cmake  ScriptLoader.h  ScriptPCH.h
src/server/shared/: CMakeLists.txt  SharedDefines.cpp  SharedDefines.h  enuminfo_SharedDefines.cpp
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  worldserver.conf.dist  worldserver.rc
src/test/: CMakeLists.txt
src/test/mocks/: WorldMock.h
src/tools/: CMakeLists.txt
src/tools/dbimport/: Main.cpp  dbimport.conf.dist
src/tools/map_extractor/: CMakeLists.txt  System.cpp  adt.cpp  adt.h  dbcfile.cpp  dbcfile.h  loadlib.cpp  mpq_libmpq.cpp  mpq_libmpq04.h  wdt.cpp  wdt.h
src/tools/mesh_extractor/: ADT.cpp  ADT.h  CMakeLists.txt  Cache.h  Chunk.cpp  Chunk.h  ChunkedData.cpp  ChunkedData.h  Constants.h  ContinentBuilder.cpp  ContinentBuilder.h  DBC.cpp  DBC.h  DoodadHandler.cpp  DoodadHandler.h  Geometry.cpp  Geometry.h  LiquidHandler.cpp  LiquidHandler.h  MPQ.cpp  MPQ.h  MPQManager.cpp  MPQManager.h  MPQMgr.cpp  MPQMgr.h  MapChunk.cpp  MapChunk.h  MeshExtractor.cpp  Model.cpp  Model.h  ObjectDataHandler.cpp  ObjectDataHandler.h  TileBuilder.cpp  TileBuilder.h  Utils.cpp  Utils.h  WDT.cpp  WDT.h  WorldModelGroup.cpp  WorldModelGroup.h  (+4 more)
src/tools/mmaps_generator/: CMakeLists.txt  IntermediateValues.cpp  IntermediateValues.h  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp
(+2063 files in other folders)
